# llama-backend

./: .gitignore  CLAUDE.md  Makefile  SOURCE_MAP.md  WSV2.md  llama-test-driver.py  pyproject.toml
docs/: api-quick-ref.md  data.txt  example-request-brief.txt  example-request-full.txt  minimax-chat-template.txt
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts  wsv2.ts
frontend/src/components/: ChatView.tsx  ConfigEditor.tsx  ErrorToast.tsx  FileBrowser.tsx  HealthCard.tsx  JsonTree.tsx  Layout.tsx  LogViewer.tsx  LongString.tsx  PropsPanel.tsx  ProxyControls.tsx  ProxyStatusCard.tsx  RequestDetail.tsx  ServerControls.tsx  ServerStatusCard.tsx  SlotsTable.tsx  TabBar.tsx  config-defaults.ts
frontend/src/pages/: Dashboard.tsx  Logs.tsx  Properties.tsx  Settings.tsx  Slots.tsx
scripts/: cluster_requests.py  com.llama-manager.server.plist  extract_requests.py  slot_tester.py
src/: __main__.py  config.py  llama_client.py  log_buffer.py  main.py  process_manager.py  proxy.py  remote_manager_client.py
src/kv_cache/: path.py
src/llama_manager/: __main__.py  config.py  dev.py  event_bus.py  llama_client.py  llama_manager.py  local_managed_model.py  main.py  process_manager.py  remote_manager_client.py  remote_unmanaged.py  ws_messages.py
src/proxy/: __init__.py  anthropic.py  lifecycle.py  logging.py  openai.py  proxy.py  slots.py  subscription.py  translate.py  utils.py
src/routers/: server.py  status.py  ws.py
tools/: test_sse_stream.py
(+68 files in other folders)
