[project]
name = "llama-backend"
dynamic = ["version"]
description = "Management backend for llama-server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "websockets>=14.0",
]

[project.scripts]
llama-manager = "llama_manager.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/llama_manager/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_manager"]
